--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.7.4",
+    "bulmaswatch": "^0.7.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
