--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "bulmaswatch": "^0.7.2",
+    "fetch-jsonp": "^1.1.3",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
